# authsniper

./: LICENSE  README.md  pyproject.toml  requirements.txt
authsniper/: auth_checks.py  cli.py  config.py  http_client.py  jwt_checks.py  session_checks.py
